# mcq-tui

./: Cargo.toml  LICENSE  README.md
src/: main.rs  types.rs
src/screen/: mcq.rs  mod.rs  statistics.rs
src/types/: mcq.rs  mod.rs
